# AgnesAgent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TESTING.md  coverage.xml  imgbb_upload.py  main.py  pyproject.toml  run_tests.sh  test_amis.py  test_async_build.py  test_dashboard.py  test_persona_api.py  test_persona_fix.py  test_server.py  test_web2_build.py
.qwen/: settings.json
agnes/: __init__.py  provider_selector.py  web_server.py
agnes/config/: __init__.py  manager.py  settings_storage.py  storage.py
agnes/core/: __init__.py  agent.py  agent_config.py  asr_provider.py  chat_history.py  llm_provider.py  prompt_templates.py  react_engine.py  streamer.py
agnes/mcp/: __init__.py  client.py  manager.py  registry.py  server.py
agnes/memory/: __init__.py  base.py  embedder.py  manager.py  simple_store.py
agnes/persona/: __init__.py  builder.py  core.py  loader.py
agnes/planning/: __init__.py  decomposer.py  executor.py  planner.py
agnes/providers/: __init__.py  base.py  ollama.py  openai.py  openvino.py
agnes/providers/asr/: __init__.py  local_whisper.py  openai_whisper.py
agnes/server/: __init__.py  api.py  models.py
agnes/server/schemas/: __init__.py  agents.py  chat.py  dashboard.py  knowledge.py  logs.py  models.py  prompts.py  publish.py  settings.py  tools.py  users.py  workflows.py
agnes/skills/: __init__.py  base.py  engine.py  registry.py  yaml_loader.py
agnes/skills/action/: __init__.py  keyboard.py  mouse.py
agnes/skills/perception/: __init__.py  ocr_read.py  screen_capture.py
agnes/skills/system/: __init__.py  trash.py
agnes/telemetry/: __init__.py  instrumentation.py  tracer.py
agnes/templates/: index.html
agnes/utils/: __init__.py  async_utils.py  audio.py  cache.py  config_loader.py  lazy_import.py  logger.py  metrics.py
agnes/web/templates/: index.html
config/: config.yaml.example
config/agents/: coder.yaml  default.yaml
config/mcp/: market.json
config/personas/: creative.yaml  creative_writer.yaml  expert.yaml  expert_analyst.yaml  test_markdown_example.md
config/skills/: calculator_example.yaml  greeting_example.yaml
data/: README.md
docs/: performance_optimization.md
examples/: agent_basic.py  mcp_game_automation.py  persona_basic.py
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
tests/: __init__.py  test_config.py  test_llm.py
web2/: INTEGRATION_GUIDE.md  __init__.py  app.py  app_config.py  main.py  models.py  persona.py  persona_api.py  persona_enhanced.py  stats_manager.py
web2/config/: app.yaml
web2/pages/: __init__.py  agents.py  chat.py  dashboard.py  knowledge.py  logs.py  models.py  prompts.py  publish.py  settings.py  tools.py  users.py  workflows.py
web2/schemas/: __init__.py  agents.json  agents.py  chat.json  chat.py  dashboard.py  knowledge.py  logs.py  mcp.py  mcp_logs.py  mcp_market.py  mcp_parts.py  mcp_parts2.py  mcp_presets.py  mcp_secrets.py  mcp_servers.py  models.json  models.py  personas.json  personas.py  prompts.py  publish.py  settings.py  skill.json  skill.py  skill_debug.py  skills.json  skills.py  tools.json  tools.py  users.py  workflows.py
web2/static/css/: anime-theme.css
web2/templates/: index.html
