[project]
name = "agnesagent"
version = "0.1.0"
description = "Highly extensible, cross-platform AI agent infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.100.0",
    "uvicorn>=0.29.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    # HTTP Client
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    # Data & Config
    "pydantic>=2.0.0",
    "pyyaml>=6.0.1",
    # LLM & MCP
    "openai>=1.0.0",
    "mcp>=1.0.0",
    # Admin UI
    "fastapi-amis-admin>=0.6.0",
    # Telemetry
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
]

[project.optional-dependencies]
# Vector Database & Embeddings
memory = [
    "chromadb>=0.5.0",
    "sentence-transformers>=2.0.0",
    "numpy>=1.24.0",
]
# Audio Processing
audio = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "whisper>=1.1.10",
]
# Screen & Input Automation
gameautomation = [
    "mss>=9.0.0",
    "easyocr>=1.7.0",
    "pynput>=1.7.6",
    "pillow>=10.0.0",
]
# System Monitoring
monitor = [
    "psutil>=6.0.0",
]
# All optional dependencies
all = [
    "chromadb>=0.5.0",
    "sentence-transformers>=2.0.0",
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "whisper>=1.1.10",
    "mss>=9.0.0",
    "easyocr>=1.7.0",
    "pynput>=1.7.6",
    "pillow>=10.0.0",
    "psutil>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.hatch.build.targets.wheel]
packages = ["agnes"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501", "W293", "W291", "E402", "E722", "F401", "F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
typeCheckingMode = "basic"
pythonPlatform = "All"
pythonVersion = "3.12"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportMissingImports = false
reportAttributeAccessIssue = false
reportUnboundVariable = false
reportCallIssue = false
reportArgumentType = false
reportOptionalMemberAccess = false
reportOptionalCall = false

[dependency-groups]
dev = [
    # Type Checking
    "basedpyright>=1.38.3",
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-benchmark>=4.0.0",
    # HTTP Mock
    "respx>=0.20.0",
    # Linting & Formatting
    "ruff>=0.15.8",
    # Build
    "hatchling>=1.24.0",
]
